--- a/nginx/nginx.conf.tmpl
+++ b/nginx/nginx.conf.tmpl
@@ -1,17 +1,30 @@
-upstream app {
-  {{ range getvs "/app/helloworld/*" }}
-  server {{.}};
-  {{ end }}
+worker_processes  1;
+daemon off;
+events {
+    worker_connections  1024;
 }
 
-server {
-  server_name _;
 
-  location / {
-    proxy_pass http://app;
-    proxy_redirect off;
-    proxy_set_header Host $host;
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-  }
+http {
+    include       mime.types;
+    default_type  application/octet-stream;
+    sendfile        on;
+    keepalive_timeout  65;
+
+    upstream app {
+      {{ range getvs "/app/helloworld/*" }}
+      server {{.}};
+      {{ end }}
+    }
+    server {
+      server_name _;
+
+      location / {
+        proxy_pass http://app;
+        proxy_redirect off;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      }
+    }
 }
